feature/DSTEW-287/implement-get-bulk-submission-endpoint - refactored lookup interface into one AbstractEntityLookup interface - added unit tests