@@ -13,9 +13,9 @@ import uk.gov.justice.laa.dstew.payments.claimsdata.model.xml.XmlOffice;
 import uk.gov.justice.laa.dstew.payments.claimsdata.model.xml.XmlOutcome;
 import uk.gov.justice.laa.dstew.payments.claimsdata.model.xml.XmlSchedule;
 import uk.gov.justice.laa.dstew.payments.claimsdata.model.xml.XmlSubmission;
+import uk.gov.justice.laa.dstew.payments.claimsdata.util.ClaimsDataTestUtil;
 
-import java.math.BigDecimal;
-import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -296,128 +296,20 @@ public class BulkSubmissionMapperTests {
   }
 
   private GetBulkSubmission200ResponseDetails getExpectedBulkSubmissionDetails(boolean includeMatterStarts) {
-    List<BulkSubmissionMatterStart> matterStarts =
+    var expectedBulkSubmissionOffice = ClaimsDataTestUtil.getBulkSubmissionOffice();
+    var expectedBulkSubmissionSchedule = ClaimsDataTestUtil.getBulkSubmissionSchedule();
+    var expectedBulkSubmissionOutcome = ClaimsDataTestUtil.getBulkSubmissionOutcome();
+    var expectedBulkSubmissionMatterStart = ClaimsDataTestUtil.getBulkSubmissionMatterStart();
+
+    List<BulkSubmissionMatterStart> expectedMatterStarts =
         includeMatterStarts
-            ? List.of(
-                new BulkSubmissionMatterStart()
-                        .scheduleRef("scheduleRef")
-                        .categoryCode("categoryCode")
-                        .procurementArea("procurementArea")
-                        .accessPoint("accessPoint")
-                        .deliveryLocation("deliveryLocation"))
-            : List.of();
+            ? List.of(expectedBulkSubmissionMatterStart)
+            : Collections.emptyList();
 
     return new GetBulkSubmission200ResponseDetails()
-            .office(new GetBulkSubmission200ResponseDetailsOffice().account("account"))
-            .schedule(new GetBulkSubmission200ResponseDetailsSchedule()
-                            .submissionPeriod("submissionPeriod")
-                            .areaOfLaw("areaOfLaw")
-                            .scheduleNum("scheduleNum"))
-            .outcomes(List.of(
-                    new BulkSubmissionOutcome()
-                            .matterType("matterType")
-                            .feeCode("feeCode")
-                            .caseRefNumber("caseRefNumber")
-                            .caseStartDate(LocalDate.of(2000, 1, 1))
-                            .caseId("caseId")
-                            .caseStageLevel("caseStageLevel")
-                            .ufn("ufn")
-                            .procurementArea("procurementArea")
-                            .accessPoint("accessPoint")
-                            .clientForename("clientForename")
-                            .clientSurname("clientSurname")
-                            .clientDateOfBirth(LocalDate.of(2000, 1, 2))
-                            .ucn("ucn")
-                            .claRefNumber("claRefNumber")
-                            .claExemption("claExemption")
-                            .gender("gender")
-                            .ethnicity("ethnicity")
-                            .disability("disability")
-                            .clientPostCode("clientPostCode")
-                            .workConcludedDate(LocalDate.of(2000, 1, 3))
-                            .adviceTime(1)
-                            .travelTime(2)
-                            .waitingTime(3)
-                            .profitCost(new BigDecimal("0.01"))
-                            .valueOfCosts(new BigDecimal("0.02"))
-                            .disbursementsAmount(new BigDecimal("0.03"))
-                            .counselCost(new BigDecimal("0.04"))
-                            .disbursementsVat(new BigDecimal("0.05"))
-                            .travelWaitingCosts(new BigDecimal("0.06"))
-                            .vatIndicator(Boolean.TRUE)
-                            .londonNonlondonRate(Boolean.FALSE)
-                            .clientType("clientType")
-                            .toleranceIndicator(Boolean.TRUE)
-                            .travelCosts(new BigDecimal("0.07"))
-                            .outcomeCode("outcomeCode")
-                            .legacyCase(Boolean.FALSE)
-                            .claimType("claimType")
-                            .adjournedHearingFee(new BigDecimal("0.08"))
-                            .typeOfAdvice("typeOfAdvice")
-                            .postalApplAccp(Boolean.TRUE)
-                            .scheduleRef("scheduleRef")
-                            .cmrhOral("cmrhOral")
-                            .cmrhTelephone("cmrhTelephone")
-                            .aitHearingCentre("aitHearingCentre")
-                            .substantiveHearing(Boolean.FALSE)
-                            .hoInterview("hoInterview")
-                            .hoUcn("hoUcn")
-                            .transferDate(LocalDate.of(2000, 1, 4))
-                            .detentionTravelWaitingCosts(new BigDecimal("0.09"))
-                            .deliveryLocation("deliveryLocation")
-                            .priorAuthorityRef("priorAuthorityRef")
-                            .jrFormFilling("jrFormFilling")
-                            .additionalTravelPayment(Boolean.TRUE)
-                            .meetingsAttended("meetingsAttended")
-                            .medicalReportsClaimed(4)
-                            .desiAccRep(5)
-                            .mhtRefNumber("mhtRefNumber")
-                            .stageReached("stageReached")
-                            .followOnWork("followOnWork")
-                            .nationalRefMechanismAdvice("nationalRefMechanismAdvice")
-                            .exemptionCriteriaSatisfied("exemptionCriteriaSatisfied")
-                            .exclCaseFundingRef("exclCaseFundingRef")
-                            .noOfClients(6)
-                            .noOfSurgeryClients(7)
-                            .ircSurgery("ircSurgery")
-                            .surgeryDate(LocalDate.of(2000, 1, 5))
-                            .lineNumber("lineNumber")
-                            .crimeMatterType("crimeMatterType")
-                            .feeScheme("feeScheme")
-                            .repOrderDate(LocalDate.of(2000, 1, 6))
-                            .noOfSuspects(8)
-                            .noOfPoliceStation(9)
-                            .policeStation("policeStation")
-                            .dsccNumber("dsccNumber")
-                            .maatId("maatId")
-                            .prisonLawPriorApproval("prisonLawPriorApproval")
-                            .dutySolicitor("dutySolicitor")
-                            .youthCourt("youthCourt")
-                            .schemeId("schemeId")
-                            .numberOfMediationSessions(10)
-                            .mediationTime(11)
-                            .outreach("outreach")
-                            .referral("referral")
-                            .clientLegallyAided("clientLegallyAided")
-                            .client2Forename("client2Forename")
-                            .client2Surname("client2Surname")
-                            .client2DateOfBirth(LocalDate.of(2000, 1, 7))
-                            .client2Ucn("client2Ucn")
-                            .client2PostCode("client2PostCode")
-                            .client2Gender("client2Gender")
-                            .client2Ethnicity("client2Ethnicity")
-                            .client2Disability("client2Disability")
-                            .client2LegallyAided("client2LegallyAided")
-                            .uniqueCaseId("uniqueCaseId")
-                            .standardFeeCat("standardFeeCat")
-                            .client2PostalApplAccp("client2PostalApplAccp")
-                            .costsDamagesRecovered("costsDamagesRecovered")
-                            .eligibleClient("eligibleClient")
-                            .courtLocation("courtLocation")
-                            .localAuthorityNumber("localAuthorityNumber")
-                            .paNumber("paNumber")
-                            .excessTravelCosts(new BigDecimal("0.10"))
-                            .medConcludedDate(LocalDate.of(2000, 1, 8))))
-            .matterStarts(matterStarts);
+            .office(expectedBulkSubmissionOffice)
+            .schedule(expectedBulkSubmissionSchedule)
+            .outcomes(List.of(expectedBulkSubmissionOutcome))
+            .matterStarts(expectedMatterStarts);
   }
 }
